--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.9",
+    "expo-image-manipulator": "~10.4.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-web": "~0.18.7",
-    "expo-image-picker": "~13.3.1",
-    "expo-sharing": "~10.3.0",
-    "expo-image-manipulator": "~10.4.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
